<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangeLang">

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_margin="10sp"
        android:id="@+id/back_button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnl_english"
        android:layout_marginBottom="30sp"
        android:textColor="#000"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_centerInParent="true"
        android:id="@+id/btnl_english"
        android:layout_marginBottom="10sp"
        android:text="@string/english"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/btnl_english"
        android:id="@+id/btnl_hindi"
        android:text="@string/hindi"
        />



</RelativeLayout>