<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_margin="2dp"
        android:src="@drawable/ic_baseline_cancel_24"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10sp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/export_as"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="8dp">

        <Button
            android:id="@+id/btExportPdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/curve_rec_background"
            android:elevation="4dp"
            android:fontFamily="@font/poppins"
            android:text="@string/pdf"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/btExportExcel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/curve_rec_background"
            android:elevation="4dp"
            android:fontFamily="@font/poppins"
            android:text="@string/excel"
            android:textColor="#FFF" />
    </LinearLayout>
</LinearLayout>